--- a/trunk/SourceCode/Android/android_server/AndroidManifest.xml
+++ b/trunk/SourceCode/Android/android_server/AndroidManifest.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="kltn.android.server"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+	package="kltn.client.android_server" android:versionCode="1"
+	android:versionName="1.0">
+	<uses-sdk android:minSdkVersion="4" />
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Android_serverActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-    </application>
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".Android_serverActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".activity.PromotionActivity"></activity>
+		<activity android:name=".activity.GPSActivity"></activity>
+		<uses-library android:name="com.google.android.maps" />
+	</application>
 </manifest>
