--- a/SourceCode/Android/android_server/AndroidManifest.xml
+++ b/SourceCode/Android/android_server/AndroidManifest.xml
@@ -6,6 +6,10 @@
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.SEND_SMS">
+	</uses-permission>
+	<uses-permission android:name="android.permission.RECEIVE_SMS">
+	</uses-permission>
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".Android_serverActivity"
@@ -15,6 +19,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<receiver android:name=".engine.SmsReceiver"
+			android:exported="true">
+			<intent-filter android:priority="999">
+				<action android:name="android.provider.Telephony.SMS_RECEIVED" />
+			</intent-filter>
+		</receiver>
 		<activity android:name=".activity.PromotionActivity"></activity>
 		<activity android:name=".activity.GPSActivity"></activity>
 		<uses-library android:name="com.google.android.maps" />
