--- a/trunk/SourceCode/Android/android_staff/AndroidManifest.xml
+++ b/trunk/SourceCode/Android/android_staff/AndroidManifest.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="kltn.client.android_staff"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+	package="kltn.client.android_staff" android:versionCode="1"
+	android:versionName="1.0">
+	<uses-sdk android:minSdkVersion="4" />
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.SEND_SMS">
+	</uses-permission>
+	<uses-permission android:name="android.permission.RECEIVE_SMS">
+	</uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Android_staffActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-    </application>
+	<application android:label="@string/app_name" android:icon="@drawable/icon_app">
+		<activity android:name=".Android_staffActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".activity.loginActivity"></activity>
+		<activity android:name=".activity.delivery_Activity"></activity>
+		<uses-library android:name="com.google.android.maps" />
+		<activity android:name=".activity.chatActivity"></activity>
+	</application>
 </manifest>
