--- a/SourceCode/Android/android_staff/AndroidManifest.xml
+++ b/SourceCode/Android/android_staff/AndroidManifest.xml
@@ -23,5 +23,6 @@
 		<activity android:name=".activity.delivery_Activity"></activity>
 		<uses-library android:name="com.google.android.maps" />
 		<activity android:name=".activity.chatActivity"></activity>
+		<activity android:name=".activity.mapActivity"></activity>
 	</application>
 </manifest>
