--- a/trunk/SourceCode/Android/android_staff/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/SourceCode/Android/android_staff/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sat Dec 17 11:31:17 GMT+07:00 2011
+#Tue Dec 20 14:45:47 GMT+07:00 2011
 eclipse.preferences.version=1
 encoding//src/kltn/client/android_staff/activity/chatActivity.java=UTF-8
 encoding//src/kltn/client/android_staff/activity/delivery_Activity.java=UTF-8
+encoding//src/kltn/client/android_staff/engine/engine.java=UTF-8
