--- a/SourceCode/Android/android_client/AndroidManifest.xml
+++ b/SourceCode/Android/android_client/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="4" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Android_clientActivity"
+        <activity android:name="kltn.client.android_client.Android_clientActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
