--- a/trunk/SourceCode/KLTN/.classpath
+++ b/trunk/SourceCode/KLTN/.classpath
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-chain-1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jakarta-oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-validator.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/struts-tiles-1.3.10.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/struts-core-1.3.10.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/struts-el-1.3.10.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/struts-faces-1.3.10.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/struts-taglib-1.3.10.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jstl-1.0.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
