--- a/trunk/SourceCode/KLTN/src/ApplicationResources.properties
+++ b/trunk/SourceCode/KLTN/src/ApplicationResources.properties
@@ -6,7 +6,7 @@ error.sl=Nhap so luong lon hon 0
 error.Account = Username "{0}" is invalid.
 error.Pass = Nhap Pass
 error.Repass=Nhap lai pass
-error.Address=Nhap vao dia chi
+error.Address=Nhập vào địa chỉ
 error.Number=Nhap vao so dien thoai
 error.P=Pass nhap lai khong trung voi pass nhap vao
 error.AP= Ten dang nhap hay mat khau bi sai
