--- a/SourceCode/KLTN/war/WEB-INF/web.xml
+++ b/SourceCode/KLTN/war/WEB-INF/web.xml
@@ -4,35 +4,80 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   version="2.5">
+  <!-- <filter> <filter-name>UTF8Filter</filter-name> <filter-class>Filters.UTF8Filter</filter-class> 
+    </filter> <filter-mapping> <filter-name>UTF8Filter</filter-name> <url-pattern>/register.vn</url-pattern> 
+    </filter-mapping> <filter-mapping> <filter-name>UTF8Filter</filter-name> 
+    <url-pattern>/upload.vn</url-pattern> </filter-mapping> <filter-mapping> 
+    <filter-name>UTF8Filter</filter-name> <url-pattern>/bill.vn</url-pattern> 
+    </filter-mapping> -->
+  <welcome-file-list>
+    <welcome-file>home.jsp</welcome-file>
+  </welcome-file-list>
+
   <servlet>
     <servlet-name>action</servlet-name>
     <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
     <init-param>
       <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config.xml</param-value>
+      <param-value>/WEB-INF/struts-config.xml,/WEB-INF/struts-config-customer.xml,/WEB-INF/struts-config-food.xml,/WEB-INF/struts-config-mobile.xml
+      </param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  <filter>
-    <filter-name>struts2</filter-name>
-    <filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
-  </filter>
+
   <!-- Standard Action Servlet Mapping -->
-
-
-  <filter-mapping>
-    <filter-name>struts2</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+  <servlet-mapping>
+    <servlet-name>action</servlet-name>
+    <url-pattern>*.vn</url-pattern>
+  </servlet-mapping>
   <session-config>
-    <session-timeout>60</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/error.jsp</location>
-  </error-page>
+  <!-- <error-page> <error-code>500</error-code> <location>/error.jsp</location> 
+    </error-page> -->
+    
+    <session-config>
+        <session-timeout>20</session-timeout>
+    </session-config>
+  <jsp-config>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-bean.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-html.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-html.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-logic.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-logic.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-nested.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-nested.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-tiles.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-tiles.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/fmt</taglib-uri>
+      <taglib-location>/WEB-INF/fmt.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
+      <taglib-location>/WEB-INF/c.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/sql</taglib-uri>
+      <taglib-location>/WEB-INF/sql.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>http://java.sun.com/jstl/x</taglib-uri>
+      <taglib-location>/WEB-INF/x.tld</taglib-location>
+    </taglib>
+  </jsp-config>
+
 </web-app>
+
   
