--- a/trunk/SourceCode/Android/android_client/AndroidManifest.xml
+++ b/trunk/SourceCode/Android/android_client/AndroidManifest.xml
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="kltn.client.android_client.activity.MainActivity"></activity>
 
     </application>
 </manifest>
