--- a/SourceCode/KLTN/src/ApplicationResources.properties
+++ b/SourceCode/KLTN/src/ApplicationResources.properties
@@ -6,7 +6,7 @@ error.sl=Nhap so luong lon hon 0
 error.Account = Username "{0}" is invalid.
 error.Pass = Nhap Pass
 error.Repass=Nhap lai pass
-error.Address=Nhập vào địa chỉ
+error.Address=Nhap vao dia chi
 error.Number=Nhap vao so dien thoai
 error.P=Pass nhap lai khong trung voi pass nhap vao
 error.AP= Ten dang nhap hay mat khau bi sai
@@ -19,8 +19,9 @@ msg.pass= 123456
 msg.images= Images/
 errors.required={0} is required.
 errors.email={0} is an invalid e-mail address.
-login.pass=Password
-login.user=User name
+login.loginPassword = Password
+login.loginId = User name
+login.email = Email
 register.user=User
 register.pass=Password
 register.email=Email
@@ -28,3 +29,8 @@ register.number=Phone number
 register.address=Address
 register.fullname=Full name
 register.repass=Re-type password
+errors.duplicated = Ten dang nhap nay da  ton tai
+login.user.existed = Tai khoan nay khong ton tai
+login.password.wrong = Mat khau khong dung
+login.loginId = Tai khoan
+login.loginPassword = Password
