--- a/trunk/SourceCode/KLTN/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/SourceCode/KLTN/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Tue Nov 01 00:11:12 GMT-08:00 2011
+#Tue Jan 10 10:55:51 GMT+07:00 2012
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 warSrcDir=war
 warSrcDirIsOutput=true
