--- a/SourceCode/KLTN/src/ApplicationResources.properties
+++ b/SourceCode/KLTN/src/ApplicationResources.properties
@@ -1,36 +1,45 @@
-error.LogonFailed = Login failed.
-error.msp = Ma san pham  "{0}" sai
-error.chitiet = Nhap vao chi tiet
-error.gia = Nhap gia phai lon hon 0
-error.sl=Nhap so luong lon hon 0
-error.Account = Username "{0}" is invalid.
-error.Pass = Nhap Pass
-error.Repass=Nhap lai pass
-error.Address=Nhap vao dia chi
-error.Number=Nhap vao so dien thoai
-error.P=Pass nhap lai khong trung voi pass nhap vao
-error.AP= Ten dang nhap hay mat khau bi sai
+
+error.AP              = Ten dang nhap hay mat khau bi sai
+error.Account         = Username "{0}" is invalid.
+error.Address         = Nhap vao dia chi
+error.LogonFailed     = Login failed.
+error.Number          = Nhap vao so dien thoai
+error.P               = Pass nhap lai khong trung voi pass nhap vao
+error.Pass            = Nhap Pass
 error.PasswordInvalid = Password is invalid.
-msg.welcome = Welcome to Simple Authentication Application
-msg.title= Trang chu
-msg.DB = DT
-msg.user= a
-msg.pass= 123456
-msg.images= Images/
-errors.required={0} is required.
-errors.email={0} is an invalid e-mail address.
-login.loginPassword = Password
-login.loginId = User name
-login.email = Email
-register.user=User
-register.pass=Password
-register.email=Email
-register.number=Phone number
-register.address=Address
-register.fullname=Full name
-register.repass=Re-type password
+error.Repass          = Nhap lai pass
+error.chitiet         = Nhap vao chi tiet
+error.gia             = Nhap gia phai lon hon 0
+error.msp             = Ma san pham  "{0}" sai
+error.sl              = Nhap so luong lon hon 0
+
 errors.duplicated = Ten dang nhap nay da  ton tai
-login.user.existed = Tai khoan nay khong ton tai
-login.password.wrong = Mat khau khong dung
-login.loginId = Tai khoan
-login.loginPassword = Password
+errors.email      = {0} is an invalid e-mail address.
+errors.minlength  = {0} can not be less than {8} characters.
+errors.required   = {0} is required.
+
+login.email          = Email
+login.loginId        = T\u00E0i kho\u1EA3n
+login.loginPassword  = M\u1EADt kh\u1EA9u
+login.password.wrong = M\u1EADt kh\u1EA9u kh\u00F4ng \u0111\u00FAng
+login.user.existed   = T\u00E0i kho\u1EA3n n\u00E0y kh\u00F4ng t\u1ED3n t\u1EA1i
+
+msg.DB      = DT
+msg.images  = Images/
+msg.pass    = 123456
+msg.title   = Trang ch\u1EE7
+msg.user    = a
+msg.welcome = Welcome to Simple Authentication Application
+
+password.notmatch = M\u1EADt kh\u1EA9u ph\u1EA3i gi\u1ED1ng nhau
+
+register.address  = Address
+register.email    = Email
+register.fullname = Full name
+register.number   = Phone number
+register.pass     = Password
+register.repass   = Re-type password
+register.user     = User
+
+shopping.update   = Số lượng sản phẩm không đủ
+shopping.invalidNumber = Nhập số không hợp lệ
