--- a/trunk/SourceCode/KLTN/war/WEB-INF/web.xml
+++ b/trunk/SourceCode/KLTN/war/WEB-INF/web.xml
@@ -4,40 +4,36 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   version="2.5">
-  <!-- <filter> <filter-name>UTF8Filter</filter-name> <filter-class>Filters.UTF8Filter</filter-class> 
-    </filter> <filter-mapping> <filter-name>UTF8Filter</filter-name> <url-pattern>/register.vn</url-pattern> 
-    </filter-mapping> <filter-mapping> <filter-name>UTF8Filter</filter-name> 
-    <url-pattern>/upload.vn</url-pattern> </filter-mapping> <filter-mapping> 
-    <filter-name>UTF8Filter</filter-name> <url-pattern>/bill.vn</url-pattern> 
-    </filter-mapping> -->
-  
-
-  <servlet>
+    <welcome-file-list>
+    <welcome-file>home.vn</welcome-file>
+	</welcome-file-list>
+	<servlet>
     <servlet-name>action</servlet-name>
     <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
     <init-param>
       <param-name>config</param-name>
-      <param-value>/WEB-INF/struts-config-provider.xml,/WEB-INF/struts-config.xml,/WEB-INF/struts-config-customer.xml,/WEB-INF/struts-config-food.xml,/WEB-INF/struts-config-mobile.xml
+      <param-value>
+		/WEB-INF/struts-config-provider.xml,
+		/WEB-INF/struts-config.xml,
+		/WEB-INF/struts-config-customer.xml,
+		/WEB-INF/struts-config-food.xml,
+		/WEB-INF/struts-config-mobile.xml
       </param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
-
   <!-- Standard Action Servlet Mapping -->
   <servlet-mapping>
     <servlet-name>action</servlet-name>
     <url-pattern>*.vn</url-pattern>
   </servlet-mapping>
   <session-config>
-    <session-timeout>100</session-timeout>
+    <session-timeout>200</session-timeout>
   </session-config>
   <!-- <error-page> <error-code>500</error-code> <location>/error.jsp</location> 
     </error-page> -->
     
-    <session-config>
-        <session-timeout>20</session-timeout>
-    </session-config>
-  <jsp-config>
+	<jsp-config>
     <taglib>
       <taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
       <taglib-location>/WEB-INF/struts-bean.tld</taglib-location>
@@ -74,10 +70,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
       <taglib-uri>http://java.sun.com/jstl/x</taglib-uri>
       <taglib-location>/WEB-INF/x.tld</taglib-location>
     </taglib>
-  </jsp-config>
-<welcome-file-list>
-    <welcome-file>home.vn</welcome-file>
-  </welcome-file-list>
+	</jsp-config>
 </web-app>
 
   
