--- a/SourceCode/KLTN/src/ApplicationResources.properties
+++ b/SourceCode/KLTN/src/ApplicationResources.properties
@@ -2,7 +2,7 @@
 error.AP              = Ten dang nhap hay mat khau bi sai
 error.Account         = Username "{0}" is invalid.
 error.Address         = Nhap vao dia chi
-error.LogonFailed     = Login failed.
+error.LogonFailed     = ??ng nh?p kh\u00F4ng th\u00E0nh c\u00F4ng
 error.Number          = Nhap vao so dien thoai
 error.P               = Pass nhap lai khong trung voi pass nhap vao
 error.Pass            = Nhap Pass
@@ -13,13 +13,13 @@ error.gia             = Nhap gia phai lon hon 0
 error.msp             = Ma san pham  "{0}" sai
 error.sl              = Nhap so luong lon hon 0
 
-errors.duplicated = Ten dang nhap nay da  ton tai
-errors.email      = {0} is an invalid e-mail address.
-errors.minlength  = {0} can not be less than {8} characters.
-errors.required   = {0} is required.
+errors.duplicated = T\u00EAn \u0111\u0103ng nh\u1EADp \u0111\u00E3 t\u1ED3n t\u1EA1i
+errors.email      = {0} l\u00E0 m\u1ED9t \u0111\u1ECBa ch\u1EC9 mail kh\u00F4ng h\u1EE3p l\u1EC7
+errors.minlength  = {0} ph\u1EA3i l\u1EDBn h\u01A1n 8 k\u00ED t\u1EF1.
+errors.required   = Ph\u1EA3i nh\u1EADp {0}.
 
 login.email          = Email
-login.loginId        = T\u00E0i kho\u1EA3n
+login.loginId        = T\u00EAn \u0111\u0103ng nh\u1EADp
 login.loginPassword  = M\u1EADt kh\u1EA9u
 login.password.wrong = M\u1EADt kh\u1EA9u kh\u00F4ng \u0111\u00FAng
 login.user.existed   = T\u00E0i kho\u1EA3n n\u00E0y kh\u00F4ng t\u1ED3n t\u1EA1i
@@ -41,5 +41,5 @@ register.pass     = Password
 register.repass   = Re-type password
 register.user     = User
 
-shopping.update   = Số lượng sản phẩm không đủ
-shopping.invalidNumber = Nhập số không hợp lệ
+shopping.update   = Sá» lÆ°á»£ng sáº£n pháº©m khÃ´ng Äá»§
+shopping.invalidNumber = S\u1ED1 n\u00E0y kh\u00F4ng h\u1EE3p l\u1EC7
