--- a/SourceCode/Android/android_staff/AndroidManifest.xml
+++ b/SourceCode/Android/android_staff/AndroidManifest.xml
@@ -12,18 +12,18 @@
 	</uses-permission>
 
 	<application android:label="@string/app_name" android:icon="@drawable/icon_app">
-		<activity android:name=".Android_staffActivity"
+		<activity android:name="AndroidStaffActivity"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".activity.loginActivity"></activity>
-		<activity android:name=".activity.delivery_Activity"></activity>
+		<activity android:name="activity.LoginActivity"></activity>
+		<activity android:name="activity.DeliveryActivity"></activity>
 		<uses-library android:name="com.google.android.maps" />
-		<activity android:name=".activity.chatActivity"></activity>
-		<activity android:name=".activity.mapActivity"></activity>
-		<provider android:authorities="kltn.client.android_staff" android:name=".engine.MainProvider"></provider>
+		<activity android:name="activity.ChatActivity"></activity>
+		<activity android:name="activity.MapActivity"></activity>
+		<provider android:authorities="kltn.client.android_staff" android:name="engine.MainProvider"></provider>
 	</application>
 </manifest>
