--- a/SourceCode/Android/android_staff/.settings/org.eclipse.core.resources.prefs
+++ b/SourceCode/Android/android_staff/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
-#Tue Dec 20 14:45:47 GMT+07:00 2011
+#Tue Feb 28 19:54:22 ICT 2012
 eclipse.preferences.version=1
-encoding//src/kltn/client/android_staff/activity/chatActivity.java=UTF-8
-encoding//src/kltn/client/android_staff/activity/delivery_Activity.java=UTF-8
-encoding//src/kltn/client/android_staff/engine/engine.java=UTF-8
+encoding//src/kltn/client/android_staff/activity/ChatActivity.java=UTF-8
+encoding//src/kltn/client/android_staff/activity/DeliveryActivity.java=UTF-8
+encoding//src/kltn/client/android_staff/engine/Engine.java=UTF-8
